[tool.poetry]
name = "download-images"
version = "0.1.0"
description = ""
authors = ["Tomás <tomasarreguib@gmail.com>"]
readme = "README.md"
packages = [{include = "download_images"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
